# airsim_simple_pkg

airsim_simple_pkg/: README.md  integrate_conda.md  package.xml  setup.cfg  setup.py
airsim_simple_pkg/airsim_simple_pkg/: __init__.py  airsim_perception_node.py  map_manager.py
airsim_simple_pkg/config/: params.yaml  vis_local_pcl.rviz
airsim_simple_pkg/launch/: airsim_perception.launch.py
simple_planner/: global_planner.py  map_manager.py  readme.md  readme_formal.md  test_on_airsim.py  test_on_maps.py
